fixed overflow

--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -497,6 +497,10 @@
     font-size: 18px;
     height: fit-content;
 
+    &::before {
+      min-width: 100%;
+    }
+
     &:hover {
       transform: scale(1.2);
       color: $accent;
